--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3|^8.0|^8.1|^8.2",
         "laravel/nova": "^4.0|^5.0"
     },
     "autoload": {
